# selfdrivetrop

./: README.md  bagconverter.py  model_with_preprocessing.py
23-20230613T140558Z-001/simple_sim_h_working 6-12-23/: CMakeLists.txt  package.xml
23-20230613T140558Z-001/simple_sim_h_working 6-12-23/cfg/: Follow.cfg
23-20230613T140558Z-001/simple_sim_h_working 6-12-23/launch/: h2_course.launch  h_circle_in_course.launch  h_course.launch  h_loop_inner.launch  h_loop_outer.launch  hello_world_camera.launch
23-20230613T140558Z-001/simple_sim_h_working 6-12-23/map/: h2_course.yaml  h_course.yaml  h_loop_course.yaml
23-20230613T140558Z-001/simple_sim_h_working 6-12-23/robot/: ackermann.yaml
23-20230613T140558Z-001/simple_sim_h_working 6-12-23/scripts/: follow_lane.py  hello_world_camera_2.py
23-20230613T140558Z-001/simple_sim_h_working 6-12-23/src/: stop_at_crosswalk.py
deeplearning_tensorflow/: bagconverter.py  base_dl_model.py  drive_by_dl.py  model_preprocessed.py  model_with_preprocessing.py  testing_only.py  twist.csv
deeplearning_tensorflow/trained_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
deeplearning_tensorflow/trained_model/variables/: variables.index
deepsteer_pkg/: package.xml
deepsteer_pkg/src/scripts/: drive.py  model_with_preprocessing.py
